--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+.tiledBody{
+  background-image: url("../public/isotile.png");
+  background-repeat: repeat-y;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
