--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  background-image: url("../public/isotile.png");
+  background-repeat: repeat-y repeat-x;
 }
 
 code {
