--- a/src/style/delete_button.css
+++ b/src/style/delete_button.css
@@ -9,8 +9,19 @@
     font-size: 16px;
   }
 
-.editButton {
+.editButtonOff {
     background-color: #36a8f4; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
+
+  .editButtonOn {
+    background-color: green; /* Green */
     border: none;
     color: white;
     padding: 15px 32px;
